TelephoneAdvisoryReportsNumberCard の notes を配列化

--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -248,8 +248,16 @@
   "感染したかもしれないと不安に思う方、感染予防法を知りたい方などは、下記、新型コロナウイルス感染症相談窓口にご相談ください。": "感染したかもしれないと不安に思う方、感染予防法を知りたい方などは、下記、新型コロナウイルス感染症相談窓口にご相談ください。",
   "新型コロナウイルス感染症相談窓口": "新型コロナウイルス感染症相談窓口",
   "9時～21時（土日祝含む）": "9時～21時（土日祝含む）",
-  "一般相談 受付件数": "一般相談 受付件数",
-  "「新型コロナウイルス感染症に関する疑問や心配事がある方からの一般相談」を計上": "「新型コロナウイルス感染症に関する疑問や心配事がある方からの一般相談」を計上",
+  "TelephoneAdvisoryReportsNumberCard": {
+    "title": "一般相談 受付件数",
+    "notes": [
+      "2021年2月4日を最後に岩手県がこのデータの公表を止めたため、このグラフの更新が止まっている",
+      "「新型コロナウイルス感染症に関する疑問や心配事がある方からの一般相談」を計上",
+      "コールセンター・各保健所等への受付件数の合計",
+      "窓口を開設した2020年1月21日からのデータを表示",
+      "岩手県の発表漏れによりデータの存在しない日がある"
+    ]
+  },
   "24時間 全日（土日・祝日を含む）": "24時間 全日（土日・祝日を含む）",
   "主に「症状がある方からの受診等に関する相談」を計上": "主に「症状がある方からの受診等に関する相談」を計上",
   "集団感染発生や曜日による数値のばらつきにより、日々の結果が変動するため、こうしたばらつきを平準化し全体の傾向を見る趣旨から、過去7日間の移動平均値を不明者数として算出（例えば、8月7日の移動平均値は、8月1日から8月7日までの実績値を平均したもの）": "集団感染発生や曜日による数値のばらつきにより、日々の結果が変動するため、こうしたばらつきを平準化し全体の傾向を見る趣旨から、過去7日間の移動平均値を不明者数として算出（例えば、8月7日の移動平均値は、8月1日から8月7日までの実績値を平均したもの）",
@@ -260,14 +268,11 @@
   "窓口を開設した2020年2月8日からのデータを表示": "窓口を開設した2020年2月8日からのデータを表示",
   "新型コロナウイルス感染症に対する医療提供に関し、岩手県から役割を設定された医療機関等に勤務し患者と接する医療従事者や職員に対し、慰労金として最大20万円を給付します。": "新型コロナウイルス感染症に対する医療提供に関し、岩手県から役割を設定された医療機関等に勤務し患者と接する医療従事者や職員に対し、慰労金として最大20万円を給付します。",
   "岩手県及び国の新型コロナウイルス感染症に関する支援策の情報をまとめています。": "岩手県及び国の新型コロナウイルス感染症に関する支援策の情報をまとめています。",
-  "窓口を開設した2020年1月21日からのデータを表示": "窓口を開設した2020年1月21日からのデータを表示",
-  "岩手県の発表漏れによりデータの存在しない日がある": "岩手県の発表漏れによりデータの存在しない日がある",
   "2021年2月4日を最後に岩手県がこのデータの公表を止めたため、このグラフの更新が止まっている": "2021年2月4日を最後に岩手県がこのデータの公表を止めたため、このグラフの更新が止まっている",
   "岩手県新型コロナウイルス感染症対応従事者慰労金交付事業のお知らせ": "岩手県新型コロナウイルス感染症対応従事者慰労金交付事業のお知らせ",
   "詳細を見る（岩手県新型コロナウイルス感染症関連情報）": "詳細を見る（岩手県新型コロナウイルス感染症関連情報）",
   "新型コロナウイルス感染拡大防止のため、業種ごとに関係団体の情報を参考としてください。": "新型コロナウイルス感染拡大防止のため、業種ごとに関係団体の情報を参考としてください。",
   "事業者の皆様へのお知らせ": "事業者の皆様へのお知らせ",
-  "コールセンター・各保健所等への受付件数の合計": "コールセンター・各保健所等への受付件数の合計",
   "発症日不明者（検査結果が陽性であっても症状がない、発症日を覚えていないなど）はグラフから除いている": "発症日不明者（検査結果が陽性であっても症状がない、発症日を覚えていないなど）はグラフから除いている",
   "発症日別による陽性者数の推移": "発症日別による陽性者数の推移",
   "各保健所から報告があった患者の発生情報を、発症日別に整理したものである": "各保健所から報告があった患者の発生情報を、発症日別に整理したものである",
