--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -248,8 +248,16 @@
   "感染したかもしれないと不安に思う方、感染予防法を知りたい方などは、下記、新型コロナウイルス感染症相談窓口にご相談ください。": "If you are worried that you may be infected, or would like to learn about preventative measures, call the Tokyo COVID-19 Call Center.",
   "新型コロナウイルス感染症相談窓口": "Number of calls in The COVID-19 Consultation Hotline",
   "9時～21時（土日祝含む）": "9:00 am - 10:00 pm (including weekends and holidays)",
-  "一般相談 受付件数": "Number of hotline consultations by people with questions or concerns",
-  "「新型コロナウイルス感染症に関する疑問や心配事がある方からの一般相談」を計上": "\"General consultation from people who have questions or concerns about the new coronavirus infection\" is counted.",
+  "TelephoneAdvisoryReportsNumberCard": {
+    "title": "一般相談 受付件数",
+    "notes": [
+      "2021年2月4日を最後に岩手県がこのデータの公表を止めたため、このグラフの更新が止まっている",
+      "「新型コロナウイルス感染症に関する疑問や心配事がある方からの一般相談」を計上",
+      "コールセンター・各保健所等への受付件数の合計",
+      "窓口を開設した2020年1月21日からのデータを表示",
+      "岩手県の発表漏れによりデータの存在しない日がある"
+    ]
+  },
   "24時間 全日（土日・祝日を含む）": "24/7 service",
   "主に「症状がある方からの受診等に関する相談」を計上": "Mainly \"consultations regarding medical examinations from people with symptoms\" is counted.",
   "集団感染発生や曜日による数値のばらつきにより、日々の結果が変動するため、こうしたばらつきを平準化し全体の傾向を見る趣旨から、過去7日間の移動平均値を不明者数として算出（例えば、8月7日の移動平均値は、8月1日から8月7日までの実績値を平均したもの）": "The positive rate here is a 7-day moving average that evens out the day-to-day variation caused by mass infections and other factors, for the purpose of overall trend analysis with line graph (e.g. the positive rate of Aug 7th is calculated by the average during the 1st to 7th of Aug.) ",
@@ -260,14 +268,11 @@
   "窓口を開設した2020年2月8日からのデータを表示": "Data since the establishment of the consultation service (Feb 8, 2020)",
   "新型コロナウイルス感染症に対する医療提供に関し、岩手県から役割を設定された医療機関等に勤務し患者と接する医療従事者や職員に対し、慰労金として最大20万円を給付します。": "Up to 200,000 yen will be given as a consolation payment to medical personnel and staff who work at medical institutions that have been assigned by Iwate Prefecture to provide medical care for COVID-19 and have contact with patients.",
   "岩手県及び国の新型コロナウイルス感染症に関する支援策の情報をまとめています。": "Information on support measures for new coronavirus infections by Iwate Prefecture and the national government is summarized here.",
-  "窓口を開設した2020年1月21日からのデータを表示": "Data since the establishment of the consultation service (Jan 21, 2020)",
-  "岩手県の発表漏れによりデータの存在しない日がある": "Due to an omission in Iwate Prefecture's announcement, there are days for which no data exist.",
   "2021年2月4日を最後に岩手県がこのデータの公表を止めたため、このグラフの更新が止まっている": "This graph has not been updated since February 4, 2021, because Iwate Prefecture has stopped publishing this data.",
   "岩手県新型コロナウイルス感染症対応従事者慰労金交付事業のお知らせ": "Notice of the Iwate Prefectural Consolation Grant Program for Workers Responding to New Coronavirus Infections",
   "詳細を見る（岩手県新型コロナウイルス感染症関連情報）": "See details (Iwate COVID-19 related information) [JA]",
   "新型コロナウイルス感染拡大防止のため、業種ごとに関係団体の情報を参考としてください。": "In order to prevent the spread of the new coronavirus infection, please refer to the information provided by the relevant organizations for each industry.",
   "事業者の皆様へのお知らせ": "Notice to Businesses",
-  "コールセンター・各保健所等への受付件数の合計": "Total number of cases received at call centers, health centers, etc.",
   "発症日不明者（検査結果が陽性であっても症状がない、発症日を覚えていないなど）はグラフから除いている": "Except people with unknown date of outbreak (test positives without symptoms, who doesn't remember the outbreak date, etc) from the graph",
   "発症日別による陽性者数の推移": "Transition of Positive cases by outbreak date",
   "各保健所から報告があった患者の発生情報を、発症日別に整理したものである": "The outbreak information of patients reported by each health center organized by outbreak date",
