--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -249,26 +249,33 @@
   "新型コロナウイルス感染症相談窓口": "Number of calls in The COVID-19 Consultation Hotline",
   "9時～21時（土日祝含む）": "9:00 am - 10:00 pm (including weekends and holidays)",
   "TelephoneAdvisoryReportsNumberCard": {
-    "title": "一般相談 受付件数",
+    "title": "Number of hotline consultations by people with questions or concerns",
     "notes": [
-      "2021年2月4日を最後に岩手県がこのデータの公表を止めたため、このグラフの更新が止まっている",
-      "「新型コロナウイルス感染症に関する疑問や心配事がある方からの一般相談」を計上",
-      "コールセンター・各保健所等への受付件数の合計",
-      "窓口を開設した2020年1月21日からのデータを表示",
-      "岩手県の発表漏れによりデータの存在しない日がある"
+      "This graph has not been updated since February 4, 2021, because Iwate Prefecture has stopped publishing this data.",
+      "\"General consultation from people who have questions or concerns about the new coronavirus infection\" is counted.",
+      "Total number of cases received at call centers, health centers, etc.",
+      "Data since the establishment of the consultation service (Jan 21, 2020)",
+      "Due to an omission in Iwate Prefecture's announcement, there are days for which no data exist."
+    ]
+  },
+  "MonitoringConsultationDeskReportsNumberCard": {
+    "title": "Number of hotline consultations by people with symptoms",
+    "notes": [
+      "This graph has not been updated since February 4, 2021, because Iwate Prefecture has stopped publishing this data.",
+      "Mainly \"consultations regarding medical examinations from people with symptoms\" is counted.",
+      "Total number of cases received at call centers, health centers, etc.",
+      "Data since the establishment of the consultation service (Feb 8, 2020)",
+      "Due to an omission in Iwate Prefecture's announcement, there are days for which no data exist."
     ]
   },
   "24時間 全日（土日・祝日を含む）": "24/7 service",
-  "主に「症状がある方からの受診等に関する相談」を計上": "Mainly \"consultations regarding medical examinations from people with symptoms\" is counted.",
   "集団感染発生や曜日による数値のばらつきにより、日々の結果が変動するため、こうしたばらつきを平準化し全体の傾向を見る趣旨から、過去7日間の移動平均値を不明者数として算出（例えば、8月7日の移動平均値は、8月1日から8月7日までの実績値を平均したもの）": "The positive rate here is a 7-day moving average that evens out the day-to-day variation caused by mass infections and other factors, for the purpose of overall trend analysis with line graph (e.g. the positive rate of Aug 7th is calculated by the average during the 1st to 7th of Aug.) ",
   "聴覚に障害のある方をはじめ電話でのご相談が難しい方に向けてファクス (019-626-0837) でも受付をしています。": "We also accept faxes (019-626-0837) for those who are hard of hearing or who have difficulty talking on the phone.",
   "次の症状がある方": "If you have any of the following symptoms",
   "症状のある方": "People who have symptoms of COVID-19",
   "対策サイト非公式": "The Information website (Unofficial)",
-  "窓口を開設した2020年2月8日からのデータを表示": "Data since the establishment of the consultation service (Feb 8, 2020)",
   "新型コロナウイルス感染症に対する医療提供に関し、岩手県から役割を設定された医療機関等に勤務し患者と接する医療従事者や職員に対し、慰労金として最大20万円を給付します。": "Up to 200,000 yen will be given as a consolation payment to medical personnel and staff who work at medical institutions that have been assigned by Iwate Prefecture to provide medical care for COVID-19 and have contact with patients.",
   "岩手県及び国の新型コロナウイルス感染症に関する支援策の情報をまとめています。": "Information on support measures for new coronavirus infections by Iwate Prefecture and the national government is summarized here.",
-  "2021年2月4日を最後に岩手県がこのデータの公表を止めたため、このグラフの更新が止まっている": "This graph has not been updated since February 4, 2021, because Iwate Prefecture has stopped publishing this data.",
   "岩手県新型コロナウイルス感染症対応従事者慰労金交付事業のお知らせ": "Notice of the Iwate Prefectural Consolation Grant Program for Workers Responding to New Coronavirus Infections",
   "詳細を見る（岩手県新型コロナウイルス感染症関連情報）": "See details (Iwate COVID-19 related information) [JA]",
   "新型コロナウイルス感染拡大防止のため、業種ごとに関係団体の情報を参考としてください。": "In order to prevent the spread of the new coronavirus infection, please refer to the information provided by the relevant organizations for each industry.",
@@ -405,7 +412,6 @@
   "県外": "Outside Iwate",
   "けんがい": "けんがい",
   "地域の医療機関（かかりつけ医）に電話で相談・受診予約をしてください": "Please call your local medical institution (family doctor) to make an appointment for consultation and consultation.",
-  "受診・相談センター 受付件数": "Number of hotline consultations by people with symptoms",
   "相談する医療機関に迷う場合や「かかりつけ医」がない場合「受診・相談センター」": "If you have no idea about which medical institution to consult, or if you don't have a \"family doctor,\" please contact the Consultation Center.",
   "または、かかりつけ医の紹介先で受診・検査となります": "Or, you will be referred to a hospital by your family doctor for examination and testing.",
   "かかりつけ医にて受診・検査をおこないます（診療・検査医療機関の場合）": "If your family doctor is a specific designated medical laboratory, you will be examined there.",
