「新型コロナウイルス感染症が心配なときに」の「に」を削除
#1405

--- a/assets/locales/ja-Hira.json
+++ b/assets/locales/ja-Hira.json
@@ -1,5 +1,5 @@
 {
-  "新型コロナウイルス感染症が心配なときに": "しんがたコロナウイルス感染症（かんせんしょう）が しんぱいな ときに",
+  "新型コロナウイルス感染症が心配なとき": "しんがたコロナウイルス感染症（かんせんしょう）が しんぱいな とき",
   "詳細を見る（東京都福祉保健局）": "もっとしりたいとき（とうきょうと ふくしほけんきょく）",
   "相談方法は、症状や状況別で3つに分かれます": "そうだんほうほうは、しょうじょう、と、じょうきょうで、みっつにわかれます。",
   "かかりつけ医がいて症状のある方": "いつもそうだんできるお医者さんがいて、しょうじょうがある人",
