--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -164,7 +164,7 @@
       "サイドメニュー項目を閉じる",
       "https://creativecommons.org/licenses/by/4.0/deed.ja",
       "クリエイティブ・コモンズ 表示 4.0 ライセンス",
-      "新型コロナウイルス感染症が心配なときに",
+      "新型コロナウイルス感染症が心配なとき",
       "県民の皆様へ",
       "企業の皆様・はたらく皆様へ",
       "岩手県新型コロナウイルス感染症関連情報",
