--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -372,6 +372,8 @@
   "いちのへまち": "いちのへまち",
   "二戸保健所管内": "二戸保健所管内",
   "県央保健所管内": "県央保健所管内",
+  "宮古保健所管内": "宮古保健所管内",
+  "久慈保健所管内": "久慈保健所管内",
   "フェーズ": "フェーズ",
   "宿泊療養部屋数": "宿泊療養部屋数",
   "病床等計": "病床等計",
