--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -372,6 +372,8 @@
   "いちのへまち": "いちのへまち",
   "二戸保健所管内": "Ninohe Area",
   "県央保健所管内": "Iwate Central Area",
+  "宮古保健所管内": "Miyako Area",
+  "久慈保健所管内": "Kuji Area",
   "フェーズ": "Phase ",
   "宿泊療養部屋数": "Recovering rooms at designated hotels",
   "病床等計": "Number of beds for patients",
