--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -177,13 +177,11 @@
   "前日比": "前日比",
   "合計": "合計",
   "{date}の合計": "%{date}の合計",
-  "WhatsNew": {
+  "WhatsNewCard": {
     "title": "最新のお知らせ"
   },
-  "SelfDisclosures": {
-    "a": [
-      "自主公表"
-    ],
+  "SelfDisclosuresCard": {
+    "title": "自主公表",
     "notes": [
       "自主公表する法的義務が無い中、うわさや風評被害への不安・個人情報の保護・組織としての社会的責任・リスクマネジメントとBCP・金商法上の開示・あとから発覚することによる評判の低下・事実の迅速な情報開示による顧客や地域への安心の提供、その狭間で、勇気を持って自主的に各ホームページ等で公表された情報 👏",
       "判明分のみ"
@@ -222,6 +220,10 @@
   "医療機関等が行った検査も含む": "医療機関等が行った検査も含む",
   "接触歴等不明者数（７日間移動平均）": "接触歴等不明者数（７日間移動平均）",
   "PositiveRateCard": {
+    "titles": [
+      "検査の陽性率",
+      "PCR検査の7日間移動平均"
+    ],
     "a": [
       "検査の陽性率",
       "PCR検査の7日間移動平均",
@@ -391,7 +393,10 @@
   "すべての医療機関の感染症病床が利用できる": "すべての医療機関の感染症病床が利用できる",
   "感染症病床に余裕がある": "感染症病床に余裕がある",
   "ConfirmedCasesNumberCard": {
-    "title": [
+    "title": "報告日別による陽性者数の推移"
+  },
+  "MonitoringConfirmedCasesNumberCard": {
+    "titles": [
       "新規陽性者数の7日間移動平均",
       "直近1週間の新規患者数（対人口10万人）"
     ],
@@ -443,15 +448,24 @@
       "{itemsLength} 項目中 {pageStart} - {pageStop} "
     ]
   },
-  "新規陽性者について、公表日時点の接触歴等の不明者、判明者に区分したものである": "新規陽性者について、公表日時点の接触歴等の不明者、判明者に区分したものである",
-  "接触歴等不明者数(7日間移動平均)": "接触歴等不明者数(7日間移動平均)",
-  "公表時点での接触歴の有無であり、公表後の追加調査で判明する場合があるが、それは反映されていない": "公表時点での接触歴の有無であり、公表後の追加調査で判明する場合があるが、それは反映されていない",
+  "UntrackedRateCard": {
+    "titles": [
+      "接触歴等不明者数(7日間移動平均)",
+      "前週比"
+    ],
+    "notes": [
+      "新規陽性者について、公表日時点の接触歴等の不明者、判明者に区分したものである",
+      "公表時点での接触歴の有無であり、公表後の追加調査で判明する場合があるが、それは反映されていない",
+      "前週比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的"
+    ]
+  },
   "陽性者数/人口": "陽性者数/人口",
-  "入院と宿泊療養の推移": "入院と宿泊療養の推移",
+  "HospitalizedNumberCard": {
+    "title": "入院と宿泊療養の推移"
+  },
   "県内": "県内",
   "このサイトの内容物は{creativeCommons}の下に提供されています。": "このサイトの内容物は{creativeCommons}の下に提供されています。",
   "前週比": "前週比",
-  "前週比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的": "前週比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的",
   "指標": "指標",
   "計": "計",
   "床": "床",
