検査陽性者の状況に前日との差 ± を表示する

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -50,6 +50,10 @@
       "Hospitalization / Medical treatment, etc.",
       "Discharged,etc.",
       "Deaths"
+    ],
+    "notes": [
+      "( ) is the percentage of the total number of positive cases.",
+      "[ ] is the difference from the yesterday."
     ]
   },
   "件": {
