--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -50,6 +50,10 @@
       "入院・療養等調整中",
       "退院等",
       "死亡"
+    ],
+    "notes": [
+      "( ) は累計陽性者数に対する割合",
+      "[ ] は前日との差"
     ]
   },
   "件": {
