SideNavigationの文言変更

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -169,12 +169,12 @@
       "Close a sidebar",
       "https://creativecommons.org/licenses/by/4.0/deed.en",
       "Creative Commons Attribution 4.0 International License",
-      "How to get help if you suspect you have COVID-19",
-      "To the residents of Iwate",
-      "For all companies and those working in Iwate",
-      "Information on the COVID-19 – Iwate Prefecture (Official)",
+      "If you think you have COVID-19",
+      "For residents",
+      "For businesses",
+      "Iwate Prefecture (Official)",
       "https://www.pref.iwate.jp/kyouikubunka/kokusai/1006971/1027622/1027623.html",
-      "COVID-19 Measures HQ"
+      "Doc from COVID-19 HQ"
     ]
   },
   "実績値": "Actual value",
