--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -169,12 +169,12 @@
       "サイドメニュー項目を閉じる",
       "https://creativecommons.org/licenses/by/4.0/deed.ja",
       "クリエイティブ・コモンズ 表示 4.0 ライセンス",
-      "新型コロナウイルス感染症が心配なとき",
+      "感染したか心配なとき",
       "県民の皆様へ",
-      "企業の皆様・はたらく皆様へ",
-      "岩手県新型コロナウイルス感染症関連情報",
+      "企業の皆様へ",
+      "県公式サイト",
       "https://www.pref.iwate.jp/kurashikankyou/iryou/covid19/index.html",
-      "新型コロナウイルス感染症対策本部"
+      "対策本部資料"
     ]
   },
   "実績値": "実績値",
