locales: 直近1週間の陽性例マップの英語化

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -376,6 +376,7 @@
   "くのへむら": "くのへむら",
   "ひろのちょう": "ひろのちょう",
   "いちのへまち": "いちのへまち",
+  "盛岡市保健所管内": "Morioka Area",
   "県央保健所管内": "Iwate Central Area",
   "中部保健所管内": "Iwate Mid Central Area",
   "奥州保健所管内": "Ōshū Area",
@@ -385,6 +386,15 @@
   "宮古保健所管内": "Miyako Area",
   "久慈保健所管内": "Kuji Area",
   "二戸保健所管内": "Ninohe Area",
+  "岩手県全域": "All areas of Iwate",
+  "居住地が県外で県内滞在も含む": "Those whose residence is outside of Iwate but stay within Iwate is included",
+  "直近1週間の陽性例マップ": "Positive case map for the last week",
+  "{area}を含む": "{area} local health center case included",
+  "{city} (管轄保健所管内含む) {last7days} 例": "{city} {last7days} case (Including the area under the jurisdiction of local health center)",
+  "例": "cases",
+  "直近1週間の新規陽性者数を、居住地の市町村ごとに分類し、色を加えたもの": "Number of new positives in the last week, categorized by city, town, or village of residence, with color added.",
+  "直近1週間の新規陽性者数が多い地域は色が濃く、少ない地域は色が薄い": "Areas with a high number of new positives in the last week are darker in color, and areas with a low number of positives are lighter in color.",
+  "居住地が市町村名ではなく「〇〇保健所管内」と発表された場合は、その管内の市町村すべてに+1する": "If it is announced as being within the jurisdiction of the local health department, +1 for all municipalities covered by the department.",
   "フェーズ": "Phase ",
   "宿泊療養部屋数": "Recovering rooms at designated hotels",
   "病床等計": "Number of beds for patients",
