--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -376,6 +376,7 @@
   "くのへむら": "くのへむら",
   "ひろのちょう": "ひろのちょう",
   "いちのへまち": "いちのへまち",
+  "盛岡市保健所管内": "盛岡市保健所管内",
   "県央保健所管内": "県央保健所管内",
   "中部保健所管内": "中部保健所管内",
   "奥州保健所管内": "奥州保健所管内",
@@ -385,6 +386,15 @@
   "宮古保健所管内": "宮古保健所管内",
   "久慈保健所管内": "久慈保健所管内",
   "二戸保健所管内": "二戸保健所管内",
+  "岩手県全域": "岩手県全域",
+  "居住地が県外で県内滞在も含む": "居住地が県外で県内滞在も含む",
+  "直近1週間の陽性例マップ": "直近1週間の陽性例マップ",
+  "{area}を含む": "{area}を含む",
+  "{city} (管轄保健所管内含む) {last7days} 例": "{city} (管轄保健所管内含む) {last7days} 例",
+  "例": "例",
+  "直近1週間の新規陽性者数を、居住地の市町村ごとに分類し、色を加えたもの": "直近1週間の新規陽性者数を、居住地の市町村ごとに分類し、色を加えたもの",
+  "直近1週間の新規陽性者数が多い地域は色が濃く、少ない地域は色が薄い": "直近1週間の新規陽性者数が多い地域は色が濃く、少ない地域は色が薄い",
+  "居住地が市町村名ではなく「〇〇保健所管内」と発表された場合は、その管内の市町村すべてに+1する": "居住地が市町村名ではなく「〇〇保健所管内」と発表された場合は、その管内の市町村すべてに+1する",
   "フェーズ": "フェーズ",
   "宿泊療養部屋数": "宿泊療養部屋数",
   "病床等計": "病床等計",
