vaccine: add ja/en locales

--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -468,6 +468,12 @@
   "HospitalizedNumberCard": {
     "title": "入院と宿泊療養と調整中の推移"
   },
+  "新型コロナウイルスワクチン接種に関する情報": "新型コロナウイルスワクチン接種に関する情報",
+  "岩手県では、新型コロナウイルスワクチンの安全かつ円滑な接種に向けて、市町村や医療機関などと連携し対応しています。": "岩手県では、新型コロナウイルスワクチンの安全かつ円滑な接種に向けて、市町村や医療機関などと連携し対応しています。",
+  "新型コロナワクチンQ&A": "新型コロナワクチンQ&A",
+  "新型コロナウイルスワクチンに関する、厚生労働省のWebサイトです。": "新型コロナウイルスワクチンに関する、厚生労働省のWebサイトです。",
+  "コロナワクチンナビ": "コロナワクチンナビ",
+  "新型コロナウイルスワクチン接種に関する、厚生労働省のWebサイトです。": "新型コロナウイルスワクチン接種に関する、厚生労働省のWebサイトです。",
   "県内": "県内",
   "このサイトの内容物は{creativeCommons}の下に提供されています。": "このサイトの内容物は{creativeCommons}の下に提供されています。",
   "前週比": "前週比",
