--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -472,8 +472,8 @@
   "岩手県では、新型コロナウイルスワクチンの安全かつ円滑な接種に向けて、市町村や医療機関などと連携し対応しています。": "Iwate Prefecture is working with municipalities and medical institutions to ensure safe and smooth vaccination with the COVID-19 vaccine.",
   "新型コロナワクチンQ&A": "COVID-19 Vaccine Q&A",
   "新型コロナウイルスワクチンに関する、厚生労働省のWebサイトです。": "The Ministry of Health, Labour and Welfare's website regarding the COVID-19 vaccine.",
-  "コロナワクチンナビ": "コロナワクチンナビ",
-  "新型コロナウイルスワクチン接種に関する、厚生労働省のWebサイトです。": "新型コロナウイルスワクチン接種に関する、厚生労働省のWebサイトです。",
+  "コロナワクチンナビ": "Corona Vaccine Nav",
+  "新型コロナウイルスワクチン接種に関する、厚生労働省のWebサイトです。": "The Ministry of Health, Labour and Welfare's website regarding vaccination against COVID-19.",
   "県内": "Inside Iwate",
   "このサイトの内容物は{creativeCommons}の下に提供されています。": "Content on This Site is Licensed Under a {creativeCommons}",
   "前週比": "Week-over-week change",
