--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -468,6 +468,9 @@
   "HospitalizedNumberCard": {
     "title": "Changes in the number of hospitalized patients and hotel care patients and waiting"
   },
+  "HospitalCapacityCard": {
+    "title": "病床の状況"
+  },
   "新型コロナウイルスワクチン接種に関する情報": "Information on vaccination against COVID-19",
   "岩手県では、新型コロナウイルスワクチンの安全かつ円滑な接種に向けて、市町村や医療機関などと連携し対応しています。": "Iwate Prefecture is working with municipalities and medical institutions to ensure safe and smooth vaccination with the COVID-19 vaccine.",
   "新型コロナワクチンQ&A": "COVID-19 Vaccine Q&A",
