宿泊療養部屋の状況Cardを実装

--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -471,6 +471,9 @@
   "HospitalCapacityCard": {
     "title": "入院病床の状況"
   },
+  "HotelCapacityCard": {
+    "title": "宿泊療養部屋の状況"
+  },
   "新型コロナウイルスワクチン接種に関する情報": "新型コロナウイルスワクチン接種に関する情報",
   "岩手県では、新型コロナウイルスワクチンの安全かつ円滑な接種に向けて、市町村や医療機関などと連携し対応しています。": "岩手県では、新型コロナウイルスワクチンの安全かつ円滑な接種に向けて、市町村や医療機関などと連携し対応しています。",
   "新型コロナワクチンQ&A": "新型コロナワクチンQ&A",
