--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -420,7 +420,7 @@
   "{date}": "{date}",
   "は陽性が": "は陽性が",
   "件・検査が": "件・検査が",
-  "件・現在の入院患者は": "件・現在の入院患者は",
+  "件・療養中は": "件・療養中は",
   "人です。陽性者の属性、検査の陽性率、病床数、市町村別陽性者数、相談件数などの各種データや過去の推移グラフはこちら。": "人です。陽性者の属性、検査の陽性率、病床数、市町村別陽性者数、相談件数などの各種データや過去の推移グラフはこちら。",
   "陽性者の属性、検査の陽性率、病床数、市町村別陽性者数、相談件数などの各種データや過去の推移グラフはこちら。": "陽性者の属性、検査の陽性率、病床数、市町村別陽性者数、相談件数などの各種データや過去の推移グラフはこちら。",
   "県外": "県外",
