--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -469,10 +469,21 @@
     "title": "Changes in the number of hospitalized patients and hotel care patients and waiting"
   },
   "HospitalCapacityCard": {
-    "title": "入院病床の状況"
+    "title": "Hospital care room status",
+    "入院中": "In use",
+    "入院療養等調整中": "Waiting",
+    "空き": "Vacant",
+    "phase2": "Solid lines indicate rooms allocated for Phase 2 (220 for mild-moderate cases + 30 for severe cases = 250 beds)",
+    "phase3": "Dotted lines indicate rooms allocated for Phase 3 (305 for mild-moderate cases + 45 for severe cases = 350 beds)",
+    "overflowed": "Red lines indicate rooms overflowed from Phase 3 plan"
   },
   "HotelCapacityCard": {
-    "title": "宿泊療養の状況"
+    "title": "Hotel care room status",
+    "療養中": "In use",
+    "空き": "Vacant",
+    "phase2": "Solid lines indicate rooms allocated for Phase 2 (85 rooms)",
+    "phase3": "Dotted lines indicate rooms allocated for Phase 3 (300 rooms)",
+    "overflowed": "Red lines indicate rooms overflowed from Phase 3 plan"
   },
   "新型コロナウイルスワクチン接種に関する情報": "Information on vaccination against COVID-19",
   "岩手県では、新型コロナウイルスワクチンの安全かつ円滑な接種に向けて、市町村や医療機関などと連携し対応しています。": "Iwate Prefecture is working with municipalities and medical institutions to ensure safe and smooth vaccination with the COVID-19 vaccine.",
