--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -469,10 +469,21 @@
     "title": "入院と宿泊療養と調整中の推移"
   },
   "HospitalCapacityCard": {
-    "title": "入院病床の状況"
+    "title": "入院病床の状況",
+    "入院中": "入院中",
+    "入院療養等調整中": "入院療養等調整中",
+    "空き": "空き",
+    "phase2": "実線枠はフェーズ2の確保病床 (軽中症220 + 重症30 = 250床)",
+    "phase3": "点線枠はフェーズ3の確保病床 (軽中症305 + 重症45 = 350床)",
+    "overflowed": "赤線枠はフェーズ3で確保予定の病床を超えた分"
   },
   "HotelCapacityCard": {
-    "title": "宿泊療養の状況"
+    "title": "宿泊療養の状況",
+    "療養中": "療養中",
+    "空き": "空き",
+    "phase2": "実線枠はフェーズ2の確保部屋 (85室)",
+    "phase3": "点線枠はフェーズ3の確保部屋 (300室)",
+    "overflowed": "赤線枠はフェーズ3で確保予定の病床を超えた分"
   },
   "新型コロナウイルスワクチン接種に関する情報": "新型コロナウイルスワクチン接種に関する情報",
   "岩手県では、新型コロナウイルスワクチンの安全かつ円滑な接種に向けて、市町村や医療機関などと連携し対応しています。": "岩手県では、新型コロナウイルスワクチンの安全かつ円滑な接種に向けて、市町村や医療機関などと連携し対応しています。",
