--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -289,7 +289,7 @@
     "notes": [
       "前日までに報告された陽性者の居住地を元にした累計値",
       "意向により居住地が公表されない場合は累計に含まれない",
-      "例えば、県外や他地域在住であるが、盛岡市の検査で陽性になった場合、盛岡市として集計される場合がある",
+      "例えば、県外や他地域在住であるが、盛岡市の検査で陽性になった場合、盛岡市として集計されない場合がある",
       "陽性者数/人口 は市町村の人口(令和2年10月1日現在)に対する陽性者数の割合"
     ]
   },
