--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -400,6 +400,18 @@
       "岩手県の場合、陽性者数が4.4人/日 (31人/週) (実効再生産数 R1.7) の状態が 3日間続いたら、社会への協力要請（外出自粛要請、営業自粛要請、学校の休校等）をおこなう。"
     ]
   },
+  "MonitoringConfirmedCasesNumberPer100kCard": {
+    "title": "盛岡市の直近1週間の新規患者数（対人口10万人）",
+    "legends": [
+      "陽性者数",
+      "直近1週間対人口10万人"
+    ],
+    "notes": [
+      "ステージ3の指標は 15",
+      "ステージ4の指標は 25",
+      "盛岡市の人口を291,320人として計算"
+    ]
+  },
   "WeeklyMapCard": {
     "title": "直近1週間の陽性例マップ",
     "notes": [
