--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -22,7 +22,9 @@
     "7MA": "7-MA : Since daily results fluctuate due to outbreaks of mass infections and variations in values depending on the day of the week, the results are calculated based on the Moving Average of the past 7 days in order to equalize such variations and see the overall trend (for example, Aug 7 is the average of the values from Aug 1 to Aug 7).",
     "検査結果の判明日を基準とする": "Based on the date when the test result is confirmed",
     "注": "Notes",
-    "データを表示": "Show Data Table"
+    "データを表示": "Show Data Table",
+    "ステージ3": "Stage 3",
+    "ステージ4": "Stage 4"
   },
   "DataView_Footer": [
     "Items per page",
