--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -22,7 +22,9 @@
     "7MA": "7日間移動平均：集団感染発生や曜日による数値のばらつきにより、日々の結果が変動するため、こうしたばらつきを平準化し全体の傾向を見る趣旨から、過去7日間の移動平均値をもとに算出（例えば、8月7日は、8月1日から8月7日までの値を平均したもの）",
     "検査結果の判明日を基準とする": "検査結果の判明日を基準とする",
     "注": "注釈",
-    "データを表示": "データを表示"
+    "データを表示": "データを表示",
+    "ステージ3": "ステージ 3",
+    "ステージ4": "ステージ 4"
   },
   "DataView_Footer": [
     "1ページあたり",
