2020国勢調査の県速報値を人口として使う

--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -411,7 +411,7 @@
     "notes": [
       "ステージ3の指標は 15",
       "ステージ4の指標は 25",
-      "盛岡市の人口を291,320人として計算"
+      "盛岡市の人口を289,893人として計算(2020年国勢調査の県速報値)"
     ]
   },
   "WeeklyMapCard": {
