宿泊療養施設2の稼働が開始
- 85と247に数字を表示する
- 宿泊療養施設のlegendを追加

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -490,7 +490,12 @@
     "空き": "Vacant",
     "phase2": "Solid lines indicate rooms allocated for Phase 2 (85 rooms)",
     "phase3": "Dotted lines indicate rooms allocated for Phase 3 (300 rooms)",
-    "overflowed": "Red lines indicate rooms overflowed from Phase 3 plan"
+    "overflowed": "Red lines indicate rooms overflowed from Phase 3 plan",
+    "legends3": [
+      "Hotel 1 (85 rooms) [Operations started on May 6, 2020]",
+      "Hotel 2 (162 rooms) [Operations started on May 20, 2021]",
+      "In Operation (85 + 162 = 247 rooms)"
+    ]
   },
   "新型コロナウイルスワクチン接種に関する情報": "Information on vaccination against COVID-19",
   "岩手県では、新型コロナウイルスワクチンの安全かつ円滑な接種に向けて、市町村や医療機関などと連携し対応しています。": "Iwate Prefecture is working with municipalities and medical institutions to ensure safe and smooth vaccination with the COVID-19 vaccine.",
