--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -490,7 +490,12 @@
     "空き": "空き",
     "phase2": "実線枠はフェーズ2の確保部屋 (85室)",
     "phase3": "点線枠はフェーズ3の確保部屋 (300室)",
-    "overflowed": "赤線枠はフェーズ3で確保予定の病床を超えた分"
+    "overflowed": "赤線枠はフェーズ3で確保予定の病床を超えた分",
+    "legends3": [
+      "宿泊療養施設1 (85室) [2020/05/06 運用開始]",
+      "宿泊療養施設2 (162室) [2021/05/20 運用開始]",
+      "運用中 (85 + 162 = 247室)"
+    ]
   },
   "新型コロナウイルスワクチン接種に関する情報": "新型コロナウイルスワクチン接種に関する情報",
   "岩手県では、新型コロナウイルスワクチンの安全かつ円滑な接種に向けて、市町村や医療機関などと連携し対応しています。": "岩手県では、新型コロナウイルスワクチンの安全かつ円滑な接種に向けて、市町村や医療機関などと連携し対応しています。",
