pulltorefreshjsを使って実装

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -1,4 +1,7 @@
 {
+  "Pull down to refresh": "Pull down to refresh",
+  "Release to refresh": "Release to refresh",
+  "Refreshing": "Refreshing",
   "Common": {
     "岩手県": "Iwate Prefecture",
     "新型コロナウイルス感染症": "COVID-19",
