--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -1,4 +1,7 @@
 {
+  "Pull down to refresh": "引っ張って更新",
+  "Release to refresh": "更新します",
+  "Refreshing": "更新中",
   "Common": {
     "岩手県": "岩手県",
     "新型コロナウイルス感染症": "新型コロナウイルス感染症",
