--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -406,7 +406,7 @@
     ]
   },
   "MonitoringConfirmedCasesNumberPer100kCard": {
-    "title": "盛岡市の直近1週間の新規患者数（対人口10万人）",
+    "title": "直近1週間の新規患者数（対人口10万人）",
     "legends": [
       "陽性者数",
       "直近1週間対人口10万人"
@@ -414,7 +414,7 @@
     "notes": [
       "ステージ3の指標は 15",
       "ステージ4の指標は 25",
-      "盛岡市の人口を289,893人として計算(2020年国勢調査の県速報値)"
+      "2020年国勢調査の県速報値の人口の値を計算に利用"
     ]
   },
   "WeeklyMapCard": {
