--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -412,9 +412,21 @@
       "直近1週間対人口10万人"
     ],
     "notes": [
+      "普通はこの「人口10万人あたり指標」は「県」の単位で使われる",
       "ステージ3の指標は 15",
       "ステージ4の指標は 25",
-      "2020年国勢調査の県速報値の人口の値を計算に利用"
+      "2020年国勢調査の県速報値の人口の値を計算に利用",
+      "岩手県全域: 1,211,206人",
+      "盛岡市保健所管内 (盛岡市) = 289,893人",
+      "県央保健所管内 (八幡平市/滝沢市/雫石町/葛巻町/岩手町/紫波町/矢巾町) = 173,558人",
+      "中部保健所管内 (花巻市/遠野市/北上市/西和賀町) = 216,841人",
+      "奥州保健所管内 (奥州市/金ケ崎町) = 128,572人",
+      "一関保健所管内 (一関市/平泉町) = 119,228人",
+      "大船渡保健所管内 (大船渡市/陸前高田市/住田町) = 58,060人",
+      "釜石保健所管内 (釜石市/大槌町) = 43,109人",
+      "宮古保健所管内 (宮古市/山田町/岩泉町/田野畑村) = 76,524人",
+      "久慈保健所管内 (久慈市/普代村/野田村/洋野町) = 54,588人",
+      "二戸保健所管内 (二戸市/軽米町/九戸村/一戸町) = 50,833人"
     ]
   },
   "WeeklyMapCard": {
