--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -148,7 +148,7 @@
       "Disclaimers",
       [
         "Although every effort has been made to ensure the accuracy of the information posted on this site, Anyone will not be responsible for any actions taken by users using the information on this site.",
-        "The Tokyo Metropolitan Government will not be responsible for any damage that may occur to a user or damage that the user may cause to a third party, as a result of using this website.",
+        "Will not be responsible for any damage that may occur to a user or damage that the user may cause to a third party, as a result of using this website.",
         "The Information on this site will be subject to change or delete without notice"
       ]
     ],
@@ -202,7 +202,7 @@
       "Identified only"
     ]
   },
-  "新型コロナウイルス感染症にかかる相談窓口について": "Detail of The Tokyo COVID-19 Consultation Hotline",
+  "新型コロナウイルス感染症にかかる相談窓口について": "Detail of The Iwate COVID-19 Consultation Hotline",
   "別タブで開く": " Open the new tab",
   "2次元コード": "QR Code",
   "※最新の情報はWebページをご覧ください": "* Please check the latest information from the website.",
@@ -256,7 +256,7 @@
   "確保病床": "Number of beds for patients",
   "入院患者数のうち、人工呼吸器管理（ECMOを含む）が必要な患者数を計上": "Within hospitalized patients, \"Severe cases\" are considered to be those patients who need ventilators or ECMO.",
   "業種ごとの感染拡大予防ガイドライン": "業種ごとの感染拡大予防ガイドライン",
-  "感染したかもしれないと不安に思う方、感染予防法を知りたい方などは、下記、新型コロナウイルス感染症相談窓口にご相談ください。": "If you are worried that you may be infected, or would like to learn about preventative measures, call the Tokyo COVID-19 Call Center.",
+  "感染したかもしれないと不安に思う方、感染予防法を知りたい方などは、下記、新型コロナウイルス感染症相談窓口にご相談ください。": "If you are worried that you may be infected, or would like to learn about preventative measures, call the Iwate COVID-19 Call Center.",
   "新型コロナウイルス感染症相談窓口": "Number of calls in The COVID-19 Consultation Hotline",
   "9時～21時（土日祝含む）": "9:00 am - 10:00 pm (including weekends and holidays)",
   "24時間 全日（土日・祝日を含む）": "24/7 service",
