--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -429,6 +429,19 @@
       "二戸保健所管内 (二戸市/軽米町/九戸村/一戸町) = 50,833人"
     ]
   },
+  "EffectiveReproductionNumberCard": {
+    "title": "実効再生産数(推定値)",
+    "legends": [
+      "実効再生産数(推定値)"
+    ],
+    "notes": [
+      "実効再生産数が1未満の期間が続けば感染が収束しつつある。",
+      "陽性者数が少ない状態では数人の差で実効再生産数が大きく変動する場合がある。"
+    ]
+  },
+  "NIID 国立感染症研究所": "NIID 国立感染症研究所",
+  "COVID-19感染報告者数に基づく簡易実効再生産数推定方法(IASR Vol.42 p128-129: 2021年6月号)": "COVID-19感染報告者数に基づく簡易実効再生産数推定方法(IASR Vol.42 p128-129: 2021年6月号)",
+  "を用いて計算": "を用いて計算",
   "WeeklyMapCard": {
     "title": "直近1週間の陽性例マップ",
     "notes": [
